<resources>
    <string name="app_name">NFT App</string>
    <string name="logout">Logout</string>
    <string name="fullname">Your full name</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="phonenumber">Phone number</string>
    <string name="password">Password</string>
    <string name="confirmpass">Confirm password</string>
    <string name="register">Register</string>
    <string name="language">Language</string>
    <string name="country">Choose Language...</string>
    <string name="change">Change Language</string>
    <string name="wait">Please wait...</string>
    <string name="sigin">Sign in</string>
    <string name="loading">Loading</string>
    <string name="waiting">Waiting for Login</string>
    <string name="fillform">Please, fill the form</string>
    <string name="emailcorrect">Your email address doesn\'t correct</string>
    <string name="passwordmatch">Your password doesn\'t matched</string>
    <string name="emailregistered">Email not registered</string>
    <string name="passmin">Minimum password should be at least 6 characters</string>
    <string name="emailhasadded">Email is already in use by a different account</string>
    <string name="alreadyexist">Username\'s already exist!</string>
    <string name="signout">Sign out</string>
    <string name="enterpassword">Enter your password</string>
    <string name="profilechange">Profile changed</string>
    <string name="succesfully">Your profile has been changed successfully</string>
    <string name="topupsuccess">Top Up Successfully</string>
    <string name="region">English (United State)</string>
    <string name="login">Login</string>
    <string name="account">Don\'t have an account?</string>
    <string name="registernow">Register Now</string>
    <string name="already">Already have an account?</string>
    <string name="loginhere">Login Here</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="mynft">My NFT</string>
    <string name="profile">Profile</string>
    <string name="welcome">Your Balance : </string>
    <string name="topup">Top Up</string>
    <string name="nominal">Top up amount</string>
    <string name="buy">Buy</string>
    <string name="buynow">Buy Now</string>
    <string name="details">Details</string>
    <string name="history">History</string>
    <string name="about">About The NFT</string>
    <string name="description">Description</string>
    <string name="priceeth">Price : </string>
    <string name="ownedby">Owned By :</string>
    <string name="created">Created By : </string>
    <string name="ownerfull">Owner Full Name : </string>
    <string name="contactowner">Contact Owner : </string>
    <string name="information">There\'s no information</string>
    <string name="nohistory">No History</string>
    <string name="createnft">Create NFT</string>
    <string name="newitem">Create New Item</string>
    <string name="setimage">Pick Image : </string>
    <string name="owned">Owned By</string>
    <string name="namenft">NFT Name</string>
    <string name="descnft">About NFT</string>
    <string name="titlenft">NFT Title</string>
    <string name="token">NFT Token : </string>
    <string name="edit">Edit Profile</string>
    <string name="changepass">Change Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="save">Save</string>
    <string name="text">Change password for email : </string>
    <string name="searchview">Search for a NFT</string>
    <string name="notfound">&#160;not found.</string>
    <string name="donthavenft">You don\'t have NFT</string>
    <string name="sort">Sort</string>
    <string name="title">Name</string>
    <string name="owner">Owner</string>
    <string name="price">Price</string>
    <string name="notlisted">Not listed yet</string>
    <string name="listing">Listing</string>
    <string name="listing2">Unlisting</string>
    <string name="listing_p">Listing Price</string>
    <string name="editimg">Edit</string>
    <string name="delimg">Delete</string>
    <string name="download">Download</string>
    <string name="del">Delete NFT</string>
    <string name="unlis">Unlisting NFT</string>
    <string name="delcon">Are you sure you want to delete this NFT?</string>
    <string name="unlis2">Are you sure to unlist this NFT?</string>
    <string name="passchangeunsuc">Password Change Failed</string>
    <string name="newpassunsuc">Please change different password</string>
    <string name="passchange">Password Changed</string>
    <string name="passchangesuc">Your password has been changed successfully</string>
    <string name="passincorrect">Password is incorrect</string>
    <string name="enteroldpass">Enter your old password</string>
    <string name="enternewpass">Enter your new password</string>
    <string name="forr">&#160;for&#160;</string>
    <string name="notifsold">You have sold your NFT&#160;</string>
    <string name="notifsell">&#160;Sell NFT for&#160;</string>
    <string name="notenoughbalance">Not enough balance, please topup</string>
    <string name="editnft">Change NFT Details</string>
    <string name="addnft_name">Please, input the title</string>
    <string name="addnft_about">Please, input the description</string>
    <string name="addnft_dialog">Creating Nft…</string>
    <string name="addnft_dialog2">Loading: </string>
    <string name="addnft_dialog_mis">Something Missing</string>
    <string name="addnft_dialog_mis2">Please choose image to create NFT</string>
    <string name="addnft_dialog_failed">Create NFT Failed</string>
    <string name="addnft_dialog_failed2">NFT\'s already exist, you can\'t create the same content of NFT</string>
    <string name="addnft_permiss">Permission Denied</string>
    <string name="addnft_permiss2">You have to allow permission to continue Go to App Settings -> Permissions -> Allowed permission App</string>
    <string name="download2">Download image successfully</string>
    <string name="edit_dtl">Details Changed</string>
    <string name="edit_dtl2">Your nft details has been changed successfully</string>
    <string name="swipe_listing">Swipe to Listing Nft</string>
    <string name="swipe_buy">Swipe to Buy Nft</string>
    <string name="notif">Notification</string>
    <string name="topup_failed">Please input amount topup</string>
    <string name="topup_failed2">Amount topup should be greater than zero</string>
    <string name="listing_failed">You can\'t sell NFT as a free</string>
    <string name="listing_failed2">Please, input your nft price</string>
    <string name="exits">Please click BACK again to exit</string>
    <string name="regis">Registration Failed</string>
    <string name="login1">Login Failed</string>
    <string name="oset1">Open Setting</string>
    <string name="oset2">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>